@@ -229,9 +229,10 @@ def pytis_matching_actions(complex_action, simple_action):
         last_components = components[2].split('::')
         if len(last_components) == 2:
             import string
-            prefix = string.join(components[:-2], '/')
+            prefix = components[0] + '/'
             result = ((prefix + last_components[0]) == simple_action or
-                      (prefix + last_components[1]) == simple_action)
+                      (prefix + last_components[1]) == simple_action or
+                      (prefix + last_components[0] + '::' + last_components[1] == simple_action))
         else:
             result = ('form/'+components[2] == simple_action)
     else:
