@@ -17,6 +17,11 @@
 
 	* lib/pytis/data/postgresql.py:
 	Allow aggregation functions MIN and MAX also on string and date/time columns..
+2009-07-02  Milan Zamazal  <pdm@brailcom.org>
+
+	* db/db_pytis_menu.py:
+	Fix dual form matching in pytis_matching_actions db function.
+
 2009-06-23  Milan Zamazal  <pdm@brailcom.org>
 
 	* tools/genmenu.py:
